--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,31 @@
 .productlistings{
   border: 1px solid black;
+  display: flex;
+  flex-direction: column;
 }
 
 .filter{
   border: 1px solid red;
 }
-
+img{
+  width: 100px;
+}
 .flx{
-  display: flex;
-  flex-direction: column;
+  margin:10px;
+  display: grid;
+  grid-template-columns: 20% 20% 20% 20%;
+  grid-gap:5%;
+
 }
 .each{
  border:  1px solid rgb(20, 25, 99);
+}
+
+button{
+  background-color: cornflowerblue;
+  font-size: larger;
+  font-weight: bolder;
+  padding: 10px;
+  margin: 10px;
+  cursor: pointer;
 }
